[gd_scene load_steps=8 format=3 uid="uid://cnv4k5mi3sn1y"]

[ext_resource type="Script" path="res://Scripts/vampire/vampire.gd" id="1_f0ew0"]
[ext_resource type="PackedScene" uid="uid://cmp6adnak8w61" path="res://Scenes/interactables/interact_area.tscn" id="2_cixqh"]
[ext_resource type="Texture2D" uid="uid://btcps1tdej2ww" path="res://assets/Sprites/Sprite_sheets/v.png" id="3_om1vn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bcdak"]

[sub_resource type="Animation" id="Animation_yq0b2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractDoor/VampireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_xso25"]
resource_name = "walking"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InteractDoor/VampireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.166667, 0.266667, 0.366667, 0.466667, 0.566667, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anaof"]
_data = {
"RESET": SubResource("Animation_yq0b2"),
"walking": SubResource("Animation_xso25")
}

[node name="vampire" type="Node2D"]
scale = Vector2(0.57663, 0.57851)
script = ExtResource("1_f0ew0")

[node name="InteractPlayer" parent="." instance=ExtResource("2_cixqh")]
scale = Vector2(3.505, 3.505)
monitoring = true
interact_label = "InteractPlayer"
interact_type = "VampAttack"
interact_value = "\"E\" to Interact"

[node name="InteractDoor" parent="." instance=ExtResource("2_cixqh")]
modulate = Color(0.813637, 0.168906, 0.338595, 1)
self_modulate = Color(0.59028, 0.0703276, 0.239411, 1)
position = Vector2(-1, 0)
collision_layer = 35
collision_mask = 35
monitoring = true
interact_label = "InteractDoor"
interact_type = "Door"

[node name="VampireSprite" type="Sprite2D" parent="InteractDoor"]
texture_filter = 1
position = Vector2(1, -3)
scale = Vector2(16.9067, 17.4533)
texture = ExtResource("3_om1vn")
offset = Vector2(35.674, -12.0072)
hframes = 7
frame = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InteractDoor"]
position = Vector2(1, 0)
scale = Vector2(4.705, 4.705)
shape = SubResource("CircleShape2D_bcdak")
debug_color = Color(0.854902, 0.0784314, 0.0352941, 0.419608)
metadata/_edit_lock_ = true

[node name="KillTime" type="Label" parent="."]
offset_left = -21.0
offset_top = -116.0
offset_right = 19.0
offset_bottom = -93.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_anaof")
}

[connection signal="area_entered" from="InteractPlayer" to="." method="_on_interact_player_area_entered"]
[connection signal="area_entered" from="InteractDoor" to="." method="_on_interact_door_area_entered"]
